- added @unit tags to mobility modules - (re)added BaseNetwork example - fixed bug in Signal.cc - added testing of packet size against slot duration parameter in CSMAMacLayer - added @unit tags to BaseWorldUtility
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@516 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -10,9 +10,9 @@ network = phySim
 ##########################################################
 tkenv-default-config = 
 phySim.**.coreDebug = false
-phySim.playgroundSizeX = 300	
-phySim.playgroundSizeY = 400
-phySim.playgroundSizeZ = 300
+phySim.playgroundSizeX = 300m
+phySim.playgroundSizeY = 400m
+phySim.playgroundSizeZ = 300m
 phySim.numHosts = 3
 
 ##########################################################
