--- a/examples/phyLayer/omnetpp.ini
+++ b/examples/phyLayer/omnetpp.ini
@@ -7,9 +7,9 @@ network = phySim
 #			Simulation parameters                        #
 ##########################################################
 phySim.**.coreDebug = false
-phySim.playgroundSizeX = 500
-phySim.playgroundSizeY = 500
-phySim.playgroundSizeZ = 500
+phySim.playgroundSizeX = 500m
+phySim.playgroundSizeY = 500m
+phySim.playgroundSizeZ = 500m
 phySim.numGSMHosts = 2
 phySim.numISMHosts = 2
 
