--- a/tests/baseMobility/omnetpp.ini
+++ b/tests/baseMobility/omnetpp.ini
@@ -9,9 +9,9 @@ cmdenv-express-mode = false
 ##############################################################################
 #       Parameters for the entire simulation                                 #
 ##############################################################################
-bmSim.playgroundSizeX = 120
-bmSim.playgroundSizeY = 120
-bmSim.playgroundSizeZ = 120
+bmSim.playgroundSizeX = 120m
+bmSim.playgroundSizeY = 120m
+bmSim.playgroundSizeZ = 120m
 # bmSim.numHosts = 1
 
 
