--- a/tests/connectionManager/omnetpp.ini
+++ b/tests/connectionManager/omnetpp.ini
@@ -12,8 +12,8 @@ sim-time-limit = 50s
 ##############################################################################
 #       Parameters for the entire simulation                                 #
 ##############################################################################
-ccSim.playgroundSizeX = 500
-ccSim.playgroundSizeY = 500
+ccSim.playgroundSizeX = 500m
+ccSim.playgroundSizeY = 500m
 
 
 
@@ -72,7 +72,7 @@ ccSim.node[*].nic.connectionManagerName = "channelcontrol"
 
 ccSim.world.useTorus = false
 ccSim.world.use2D = true
-ccSim.playgroundSizeX = 900
+ccSim.playgroundSizeX = 900m
 ccSim.playgroundSizeZ = 0
 ccSim.numHosts = 33
 
@@ -457,9 +457,9 @@ ccSim.node[32].mobility.y = 400
 
 ccSim.world.useTorus = false
 ccSim.world.use2D = false
-ccSim.playgroundSizeY = 900
-ccSim.playgroundSizeX = 800
-ccSim.playgroundSizeZ = 500
+ccSim.playgroundSizeY = 900m
+ccSim.playgroundSizeX = 800m
+ccSim.playgroundSizeZ = 500m
 ccSim.numHosts = 68
 
 #### Node tests around one BC-Node####
@@ -900,7 +900,7 @@ ccSim.node[67].mobility.z = 0
 
 ccSim.world.useTorus = true
 ccSim.world.use2D = false
-ccSim.playgroundSizeZ = 500
+ccSim.playgroundSizeZ = 500m
 ccSim.numHosts = 68
 
 #### Node tests around one BC-Node####
