- changed phyLayer example to a multiConnectionManager example - updated comments in Mac80211 examples omnetpp.ini
git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@522 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -38,7 +38,7 @@ sim.world.useTorus = false
 sim.world.use2D = false
 
 ##############################################################################
-#       Parameters for the ChannelControl                                    #
+#       Parameters for the ConnectionManager                                 #
 ##############################################################################
 sim.channelcontrol.carrierFrequency = 2.4e+9Hz  # [Hz]
 
@@ -142,18 +142,7 @@ sim.host[*].nic.mac.neighborhoodCacheSize = 30
 sim.host[*].nic.mac.neighborhoodCacheMaxAge = 100s  # [s]
 
 ##############################################################################
-#       Parameters for the radio
-##############################################################################
-
-
-##############################################################################
-#       Parameters for the Decider                                           #
-##############################################################################
-
-# debug switch
-
-##############################################################################
-#       Parameters for the SnrEval                                           #
+#       Parameters for the Phy                                               #
 ##############################################################################
 
 # debug switch
