--- a/examples/multiConnectionManager/omnetpp.ini
+++ b/examples/multiConnectionManager/omnetpp.ini
@@ -6,7 +6,7 @@ network = phySim
 ##########################################################
 #			Simulation parameters                        #
 ##########################################################
-phySim.**.coreDebug = false
+phySim.**.coreDebug = true
 phySim.playgroundSizeX = 500m
 phySim.playgroundSizeY = 500m
 phySim.playgroundSizeZ = 500m
@@ -22,7 +22,6 @@ phySim.world.use2D = false
 ##########################################################
 #			    GSM channel parameters                  #
 ##########################################################
-phySim.GSMChannel.coreDebug = false
 phySim.GSMChannel.sendDirect = false
 phySim.GSMChannel.pMax = 20mW
 phySim.GSMChannel.sat = -90dBm
@@ -32,7 +31,6 @@ phySim.GSMChannel.carrierFrequency = 868e+6Hz
 ##########################################################
 #		       ISM channel parameters                 #
 ##########################################################
-phySim.ISMChannel.coreDebug = false
 phySim.ISMChannel.sendDirect = false
 phySim.ISMChannel.pMax = 100mW
 phySim.ISMChannel.sat = -90dBm
@@ -42,59 +40,61 @@ phySim.ISMChannel.carrierFrequency = 868e+6Hz
 ##########################################################
 #             Host specific parameters                   #
 ##########################################################
-phySim.*Node*.utility.coreDebug = false
+
+################# Application Layer  #####################
+
+# debug switch
+phySim.*Node*.appl.debug = false
+phySim.*Node*.appl.headerLength = 1024bit
+phySim.*Node*.appl.burstSize = 3
+
+################### Network Layer ########################
+phySim.*Node*.net.headerLength = 32bit# in bits
+phySim.*Node*.net.debug = false
+phySim.*Node*.net.stats = false
+
+################ MAC layer parameters ####################
+phySim.*Node[*].nic.mac.queueLength = 5
+phySim.*Node[*].nic.mac.headerLength = 24
+phySim.*Node[*].nic.mac.slotDuration = 0.08s
+phySim.*Node[*].nic.mac.difs = 0.0005s
+phySim.*Node[*].nic.mac.maxTxAttempts = 14
+phySim.*Node[*].nic.mac.defaultChannel = 0
+phySim.*Node[*].nic.mac.bitrate = 15360bps
+phySim.*Node[*].nic.mac.contentionWindow = 20
+phySim.*Node[*].nic.mac.txPower = 100mW  # [mW]
 
 ################ PhyLayer parameters #####################
-phySim.*Node*.*Nic.phy.usePropagationDelay = false
-phySim.*Node*.*Nic.phy.thermalNoise = 1.0
+phySim.*Node*.nic.phy.usePropagationDelay = false
+phySim.*Node*.nic.phy.thermalNoise = -110dBm
+phySim.*Node*.nic.phy.useThermalNoise = true
         
-phySim.*Node*.*Nic.phy.analogueModels = xmldoc("config.xml")
-phySim.*Node*.*Nic.phy.decider = xmldoc("config.xml")
+phySim.*Node*.nic.phy.decider = xmldoc("decider.xml")
 
-phySim.*Node*.*Nic.phy.timeRXToTX = 0.01
-phySim.*Node*.*Nic.phy.timeRXToSleep = 0.015
+phySim.*Node*.nic.phy.timeRXToTX = 0.0s
+phySim.*Node*.nic.phy.timeRXToSleep = 0.0s
 
-phySim.*Node*.*Nic.phy.timeTXToRX = 0.02
-phySim.*Node*.*Nic.phy.timeTXToSleep = 0.025
+phySim.*Node*.nic.phy.timeTXToRX = 0.0s
+phySim.*Node*.nic.phy.timeTXToSleep = 0.0s
 
-phySim.*Node*.*Nic.phy.timeSleepToRX = 0.03
-phySim.*Node*.*Nic.phy.timeSleepToTX = 0.035
-phySim.*Node*.*Nic.phy.initialRadioState = 2
-
-##########################################################
-#               hybrid host parameters                     #
-##########################################################
-phySim.hybridNode.ISMNic.connectionManagerName = "ISMChannel"
-phySim.hybridNode.GSMNic.connectionManagerName = "GSMChannel"
-
-################ PhyLayer parameters #####################
-phySim.hybridNode.ISMNic.phy.sensitivity = 0.1
-phySim.hybridNode.ISMNic.phy.maxTXPower = 100.0
-
-phySim.hybridNode.GSMNic.phy.sensitivity = 0.2
-phySim.hybridNode.GSMNic.phy.maxTXPower = 20.0
-
-################ Mobility parameters #####################
-phySim.hybridNode.mobility.x = 150
-phySim.hybridNode.mobility.y = 290
-phySim.hybridNode.mobility.z = 100
-phySim.hybridNode.GSMNic.id = 12
-phySim.hybridNode.ISMNic.id = 1
+phySim.*Node*.nic.phy.timeSleepToRX = 0.0s
+phySim.*Node*.nic.phy.timeSleepToTX = 0.0s
+phySim.*Node*.nic.phy.initialRadioState = 2
 
 ##########################################################
 #              GSM hosts parameters                     #
 ##########################################################
-phySim.GSMNode[*].*Nic.connectionManagerName = "GSMChannel"
+phySim.GSMNode[*].nic.connectionManagerName = "GSMChannel"
 
 ################ PhyLayer parameters #####################
-phySim.GSMNode[*].*Nic.phy.sensitivity = -7
-phySim.GSMNode[*].*Nic.phy.maxTXPower = 20.0
+phySim.GSMNode[*].nic.phy.sensitivity = -100.5dBm
+phySim.GSMNode[*].nic.phy.maxTXPower = 20.0mW
+phySim.GSMNode[*].nic.phy.analogueModels = xmldoc("GSMmodels.xml")
 
 ################ Mobility parameters #####################
 phySim.GSMNode[0].mobility.x = 230
 phySim.GSMNode[0].mobility.y = 220
 phySim.GSMNode[0].mobility.z = 100
-phySim.GSMNode[0].normalNic.id = 11
 
 phySim.GSMNode[2].mobility.x = 400
 phySim.GSMNode[2].mobility.y = 390
@@ -103,45 +103,45 @@ phySim.GSMNode[2].mobility.z = 100
 phySim.GSMNode[1].mobility.x = 250
 phySim.GSMNode[1].mobility.y = 120
 phySim.GSMNode[1].mobility.z = 100
-phySim.GSMNode[1].normalNic.id = 10
 
 ##########################################################
 #              ISM hosts parameters                   #
 ##########################################################
-phySim.ISMNode[*].*Nic.connectionManagerName = "ISMChannel"
+phySim.ISMNode[*].nic.connectionManagerName = "ISMChannel"
 
 ################ PhyLayer parameters #####################
-phySim.ISMNode[*].*Nic.phy.sensitivity = 0.1
-phySim.ISMNode[*].*Nic.phy.maxTXPower = 100.0
+phySim.ISMNode[*].nic.phy.sensitivity = -119.5dBm
+phySim.ISMNode[*].nic.phy.maxTXPower = 100.0mW
+phySim.ISMNode[*].nic.phy.analogueModels = xmldoc("ISMmodels.xml")
 
 ################ Mobility parameters #####################
 phySim.ISMNode[0].mobility.x = 150
 phySim.ISMNode[0].mobility.y = 90
 phySim.ISMNode[0].mobility.z = 100
-phySim.ISMNode[0].normalNic.id = 0
 
-phySim.ISMNode[1].mobility.x = 450
-phySim.ISMNode[1].mobility.y = 490
+phySim.ISMNode[1].mobility.x = 200
+phySim.ISMNode[1].mobility.y = 300
 phySim.ISMNode[1].mobility.z = 100
-phySim.ISMNode[1].normalNic.id = 2
 
-phySim.ISMNode[2].mobility.x = 450
-phySim.ISMNode[2].mobility.y = 490
+phySim.ISMNode[2].mobility.x = 400
+phySim.ISMNode[2].mobility.y = 400
 phySim.ISMNode[2].mobility.z = 450
 
 
 [Config config1]
 description = "Same CM - no delay"
 phySim.numGSMHosts = 0
+phySim.numISMHosts = 3
 
 [Config config2]
 description = "Same CM - with delay"
 phySim.numGSMHosts = 0
-phySim.*Node*.*Nic.phy.usePropagationDelay = true
+phySim.numISMHosts = 3
+phySim.*Node*.nic.phy.usePropagationDelay = true
 
 [Config config3]
-description = "Different CM - with delay"
+description = "Different CM - no delay"
 
 [Config config4]
 description = "Different CM - with delay"
-phySim.*Node*.*Nic.phy.usePropagationDelay = true
+phySim.*Node*.nic.phy.usePropagationDelay = true
