--- a/doc/doxy.cfg
+++ b/doc/doxy.cfg
@@ -138,7 +138,7 @@ EXCLUDE_PATTERNS       = *_n.cc *_n.h *_m.cc *_m.h
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *
 EXAMPLE_RECURSIVE      = NO
-IMAGE_PATH             = 
+IMAGE_PATH             = ./doc/images
 INPUT_FILTER           = 
 FILTER_PATTERNS        = 
 FILTER_SOURCE_FILES    = NO
