documentation: - provided @brief tags for almost any class - added group for examples - assigned classes to groups - corrected mappingDetails group - changed NedDoc mainpage - updated INSTALL notes
code:
- changed "channelControl" in example networks to "connectionManager"
- set ConnectionManager icon in CSMAMac example


git-svn-id: https://mixim.svn.sourceforge.net/svnroot/mixim/trunk@534 ccb5d51d-3e1d-0410-9886-bf3c9037c363

--- a/examples/CSMAMac/omnetpp.ini
+++ b/examples/CSMAMac/omnetpp.ini
@@ -24,16 +24,16 @@ phySim.world.use2D = false
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-phySim.channelControl.sendDirect = false
-phySim.channelControl.pMax = 100mW
-phySim.channelControl.sat = -91dBm
-phySim.channelControl.alpha = 3.0
-phySim.channelControl.carrierFrequency = 2.412e+9Hz
+phySim.connectionManager.sendDirect = false
+phySim.connectionManager.pMax = 100mW
+phySim.connectionManager.sat = -91dBm
+phySim.connectionManager.alpha = 3.0
+phySim.connectionManager.carrierFrequency = 2.412e+9Hz
 
 ##########################################################
 #             Host specific parameters                   #
 ##########################################################
-phySim.node[*].nic.connectionManagerName = "channelControl"
+phySim.node[*].nic.connectionManagerName = "connectionManager"
 
 
 ################ PhyLayer parameters #####################
