--- a/examples/Mac80211/omnetpp.ini
+++ b/examples/Mac80211/omnetpp.ini
@@ -40,15 +40,15 @@ sim.world.use2D = false
 ##############################################################################
 #       Parameters for the ConnectionManager                                 #
 ##############################################################################
-sim.channelcontrol.carrierFrequency = 2.4e+9Hz  # [Hz]
+sim.connectionManager.carrierFrequency = 2.4e+9Hz  # [Hz]
 
 # max transmission power [mW]
-sim.channelcontrol.pMax = 110.11mW  # [mW]
+sim.connectionManager.pMax = 110.11mW  # [mW]
 # signal attenuation threshold [dBm]
-sim.channelcontrol.sat = -120dBm  # [dBm]
+sim.connectionManager.sat = -120dBm  # [dBm]
 # path loss coefficient alpha
-sim.channelcontrol.alpha = 4
-sim.channelcontrol.sendDirect = false
+sim.connectionManager.alpha = 4
+sim.connectionManager.sendDirect = false
 
 
 
