--- a/examples/analogueModels/omnetpp.ini
+++ b/examples/analogueModels/omnetpp.ini
@@ -25,12 +25,12 @@ phySim.world.use2D = false
 ##########################################################
 #			         channel parameters                  #
 ##########################################################
-phySim.channelControl.coreDebug = false
-phySim.channelControl.sendDirect = false
-phySim.channelControl.pMax = 100mW
-phySim.channelControl.sat = -90dBm
-phySim.channelControl.alpha = 2.0
-phySim.channelControl.carrierFrequency = 2.4e+9Hz
+phySim.connectionManager.coreDebug = false
+phySim.connectionManager.sendDirect = false
+phySim.connectionManager.pMax = 100mW
+phySim.connectionManager.sat = -90dBm
+phySim.connectionManager.alpha = 2.0
+phySim.connectionManager.carrierFrequency = 2.4e+9Hz
 
 ##########################################################
 #             Host specific parameters                   #
@@ -56,7 +56,7 @@ phySim.node[*].nic.phy.initialRadioState = 2
 ##########################################################
 #                   hosts parameters                     #
 ##########################################################
-phySim.node[*].nic.connectionManagerName = "channelControl"
+phySim.node[*].nic.connectionManagerName = "connectionManager"
 
 ################ PhyLayer parameters #####################
 phySim.node[*].nic.phy.sensitivity = -90
