Updated BERDistance configuration to consider a range between 1 and 50 meters, and packet sizes of 8, 16, 32, 64 and 128 bytes.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -15,48 +15,28 @@ outputvectormanager-class = "cAkOutputVectorManager"
 
 cmdenv-express-mode = true
 
-##########################################################
-#			Simulation parameters                        #
-##########################################################
 sim.**.coreDebug = false
 sim.playgroundSizeX = 500
 sim.playgroundSizeY = 500
 sim.playgroundSizeZ = 500
 
-##########################################################
-#			WorldUtility parameters                      #
-##########################################################
 sim.world.useTorus = false
 sim.world.use2D = false
 
-##########################################################
-#			         channel parameters                  #
-##########################################################
-#sim.channelControl.coreDebug = 0
 sim.channelControl.sendDirect = false
 sim.channelControl.pMax = 1000 mW
 sim.channelControl.sat = -100 dBm
 sim.channelControl.alpha = 2.0
 sim.channelControl.carrierFrequency = 4500e+6 Hz
 
-##########################################################
-#             Host specific parameters                   #
-##########################################################
-#sim.*Node*.utility.coreDebug = 0
-
-################ PhyLayer parameters #####################
 sim.node[*].nic.phy.usePropagationDelay = false
 sim.node[*].nic.phy.thermalNoise = 1.0
-        
 sim.node[*].nic.phy.timeRXToTX = 0.00021
 sim.node[*].nic.phy.timeRXToSleep = 0.000031
-
 sim.node[*].nic.phy.timeTXToRX = 0.00012
 sim.node[*].nic.phy.timeTXToSleep = 0.000032
-
 sim.node[*].nic.phy.timeSleepToRX = 0.000100
 sim.node[*].nic.phy.timeSleepToTX = 0.000100
-
 sim.node[*].nic.phy.PSleep = 0.01
 sim.node[*].nic.phy.PTx = 1
 sim.node[*].nic.phy.PSync = 100
@@ -65,16 +45,12 @@ sim.node[*].nic.phy.PSwitch = 10
 sim.node[*].nic.phy.maxTXPower = 1 # useless but required by BasePhyLayer
 sim.node[0].nic.phy.debug = true
 ***.debug = false
-##########################################################
-#                   hosts parameters                     #
-##########################################################
+
 sim.node[*].nic.connectionManagerName = "channelControl"
 
-################ PhyLayer parameters #####################
 sim.node[*].nic.phy.sensitivity = 0.1
 sim.node[*].nic.phy.maxTXPower = 100.0
 
-################ MAC parameters ##########################
 sim.node[*].nic.mac.headerLength = 2 byte
 sim.node[*].nic.mac.maxRetries = 1
 sim.node[0].nic.mac.stats = true
@@ -93,14 +69,8 @@ sim.node[7].nic.mac.netaddress = 7
 sim.node[8].nic.mac.netaddress = 8
 sim.node[9].nic.mac.netaddress = 9
 sim.node[10].nic.mac.netaddress = 10
-
 sim.node[*].nic.mac.debug = false
-#sim.node[*].nic.mac.PulseMaxEnergy = 0.000074989 # -41.3 dBm/MHz
-#sim.node[*].nic.mac.PulseMaxEnergy = 1 # 0 dBm / MHz
 
-
-
-################ Application parameters ##################
 sim.node[*].app.trafficParam = 1
 sim.node[0].app.nodeAddr = 0
 sim.node[1].app.nodeAddr = 1
@@ -138,7 +108,6 @@ sim.node[31].app.nodeAddr = 31
 
 sim.node[*].app.debug = false
 sim.node[*].app.flood = false
-
 sim.node[*].app.stats = false
 sim.node[*].app.trace = false
 sim.node[*].app.payloadSize = 8 byte
@@ -151,11 +120,11 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERD]
-sim.node[1].app.payloadSize = 8 byte
+sim.node[1].app.payloadSize = ${packetSize=8,16,32,64,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 repeat = 10
-sim.node[1].mobility.x = ${distance=1..10 step 1, 20..100 step 10} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..10 step 1, 10..20 step 2, 25..50 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
@@ -164,16 +133,14 @@ extends = BERD
 repeat = 1
 sim.node[1].app.nbPackets = ${nbPackets=100000}
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].stats.vector-recording = false
 sim.node[0].stats.**.with-akaroa = false
 sim.node[0].nic.mac.vector-recording = true
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 sim.node[0].nic.mac.ber.with-akaroa = true
-
-
 
 
 [Config seg]
