Commented out references to old ini files.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -159,14 +159,6 @@ sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-nlos}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=1dB,3dB,10dB}.xml")
 
-[Config RS]
-description = "Evaluates the BER with Reed-Solomon error correction."
-extends = BERD
-repeat = 1
-sim.node[1].app.nbPackets = ${nbPackets=1000}
-sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-nlos}.xml")
-sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml")
 
 [Config waveforms]
 description = "Generates some waveforms for illustration purposes."
@@ -195,7 +187,7 @@ sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los
 sim.node[0].nic.phy.decider = xmldoc("receivers/${Receiver=a1-3dB}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/a999-3dB.xml")
 repeat = 10
-include cmpPCM1D_positions.ini
+#include cmpPCM1D_positions.ini
  
 
 [Config MAICircle]
@@ -216,7 +208,7 @@ sim.node[*].nic.phy.analogueModels = xmldoc("channels/noshadow/${Channel=ghassem
 #sim.node[*].nic.phy.analogueModels = xmldoc("channels/shadow/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
 
 sim.node[*].nic.phy.decider = xmldoc("../widemac/receivers/${Receiver=3dBAlwaysSync}.xml")
-include topo.ini
+#include topo.ini
 sim.node[0].stats.vector-recording = true
 sim.node[0].stats.**.with-akaroa = true
 sim.node[0].nic.mac.vector-recording = false
