--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -120,11 +120,11 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERD]
-sim.node[1].app.payloadSize = ${packetSize=8,16,32,64,128} byte
+sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 repeat = 10
-sim.node[1].mobility.x = ${distance=1..10 step 1, 10..20 step 2, 25..50 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..20 step 2, 25..50 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
