--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -141,7 +141,7 @@ sim.node[0].nic.mac.vector-recording = true
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 sim.node[0].nic.mac.ber.with-akaroa = true
-
+sim.node[0].nic.phy.sinr.with-akaroa = true
 
 [Config seg]
 extends = BERD
