New configuration with more positions.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -120,18 +120,18 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERD]
-sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
+sim.node[1].app.payloadSize = ${packetSize=8,16,32,64,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
-repeat = 10
-sim.node[1].mobility.x = ${distance=1..20 step 2, 25..50 step 5} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+repeat = 1
+sim.node[1].mobility.x = ${distance=5..20 step 1, 22..30 step 2, 35..50 step 5, 60..100 step 10} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
 description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
 repeat = 1
-sim.node[1].app.nbPackets = ${nbPackets=100000}
+sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
