--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -120,11 +120,11 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERD]
-sim.node[1].app.payloadSize = ${packetSize=8,16,32,64,128} byte
+sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 repeat = 1
-sim.node[1].mobility.x = ${distance=5..20 step 1, 22..30 step 2, 35..50 step 5, 60..100 step 10} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
@@ -143,6 +143,7 @@ sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 sim.node[0].nic.mac.ber.with-akaroa = true
 sim.node[0].nic.mac.ser.with-akaroa = true
 sim.node[0].nic.phy.sinr.with-akaroa = true
+sim.node[0].nic.phy.averagePower.with-akaroa = true
 
 [Config seg]
 extends = BERD
