Deactivated logging of ieee average power.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -143,7 +143,7 @@ sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
 sim.node[0].nic.mac.ber.with-akaroa = true
 sim.node[0].nic.mac.ser.with-akaroa = true
 sim.node[0].nic.phy.sinr.with-akaroa = true
-sim.node[0].nic.phy.averagePower.with-akaroa = true
+sim.node[0].nic.phy.averagePower.with-akaroa = false
 
 [Config seg]
 extends = BERD
