--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -7,9 +7,9 @@ fname-append-host = false
 num-rngs = 1
 ned-path = ../../base;../../modules;../../examples;
 
-rng-class = "cAkaroaRNG"
-outputvectormanager-class = "cAkOutputVectorManager"
-**.with-akaroa = false
+#rng-class = "cAkaroaRNG"
+#outputvectormanager-class = "cAkOutputVectorManager"
+#**.with-akaroa = false
 **.vector-recording = false
 
 
@@ -166,10 +166,11 @@ sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=1dB,3dB,10dB}.xml")
 description = "Generates some waveforms for illustration purposes."
 extends = BERD
 repeat = 1
+sim.node[0].nic.phy.vector-recording = true
 sim.node[1].nic.mac.trace = true
 sim.node[0].nic.mac.trace = true
 sim.node[*].nic.mac.RSDecoder = true
-sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm1}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}-trace.xml")
 sim.node[1].app.nbPackets = ${nbPackets=1}
 sim.node[*].app.nbPackets = 0
