--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -7,9 +7,9 @@ fname-append-host = false
 num-rngs = 1
 ned-path = ../../base;../../modules;../../examples;
 
-#rng-class = "cAkaroaRNG"
-#outputvectormanager-class = "cAkOutputVectorManager"
-#**.with-akaroa = false
+rng-class = "cAkaroaRNG"
+outputvectormanager-class = "cAkOutputVectorManager"
+**.with-akaroa = false
 **.vector-recording = false
 
 
@@ -144,6 +144,19 @@ sim.node[0].nic.mac.ber.with-akaroa = true
 sim.node[0].nic.mac.ser.with-akaroa = true
 sim.node[0].nic.phy.sinr.with-akaroa = true
 sim.node[0].nic.phy.averagePower.with-akaroa = false
+
+[Config epflEbN0]
+description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
+extends = epflEbN0
+sim.node[1].app.nbPackets = ${nbPackets=1000000}
+sim.node[*].nic.mac.RSDecoder = true
+sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
+sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
+sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
+sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
+sim.node[0].nic.mac.ber.with-akaroa = true
+sim.node[0].nic.mac.ser.with-akaroa = true
+sim.node[0].nic.phy.sinr.with-akaroa = true
 
 [Config seg]
 extends = BERD
