Fixed typo in epfl validation config.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -147,7 +147,7 @@ sim.node[0].nic.phy.averagePower.with-akaroa = false
 
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
-extends = BERDistance
+extends = BERD
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
