Updated distance iteration variable to something more suited to channel2.

--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -124,7 +124,7 @@ sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 repeat = 1
-sim.node[1].mobility.x = ${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].mobility.x = ${distance=1..10}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
@@ -148,7 +148,6 @@ sim.node[0].nic.phy.averagePower.with-akaroa = false
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
 extends = BERD
-sim.node[1].mobility.x = ${dist=1..10 step 1}
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
