--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -120,17 +120,17 @@ sim.node[1].mobility.y = 0
 sim.node[1].mobility.z = 0
 
 [Config BERD]
-sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
 sim.node[*].app.dstAddr = 0
 **.numHosts = 2
 repeat = 1
-sim.node[1].mobility.x = ${distance=1..10}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[0].app.nbPackets = 0
 
 [Config BERDistance]
 description = "Evaluates the bit error rate as a function of distance"
 extends = BERD
 repeat = 1
+sim.node[1].app.payloadSize = ${packetSize=8,32,128} byte
+sim.node[1].mobility.x = ${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=ghassemzadeh-los,ghassemzadeh-nlos,cm1,cm2,cm5}.xml")
@@ -148,6 +148,8 @@ sim.node[0].nic.phy.averagePower.with-akaroa = false
 [Config epflEbN0]
 description = "Computes the BER as a function of Eb/N0 with the CM2 channel model and 127 bytes packets."
 extends = BERD
+sim.node[1].mobility.x = ${distance=1..10}#${distance=5..30 step 5, 40,50} #${distance=1, 2, 3, 4, 5, 6, 7, 8, 9, 10..100 step 10}
+sim.node[1].app.payloadSize = ${packetSize=127} byte
 sim.node[1].app.nbPackets = ${nbPackets=1000000}
 sim.node[*].nic.mac.RSDecoder = true
 sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
