--- a/examples/ieee802154a/akaroa.ini
+++ b/examples/ieee802154a/akaroa.ini
@@ -156,9 +156,10 @@ sim.node[*].nic.phy.analogueModels = xmldoc("channels/${Channel=cm2}.xml")
 sim.node[*].nic.phy.decider = xmldoc("receivers/${Receiver=3dB}.xml") # sync always succeeds
 sim.node[0].nic.mac.packetSuccessRate.with-akaroa = true
 sim.node[0].nic.mac.packetSuccessRateNoRS.with-akaroa = true
-sim.node[0].nic.mac.ber.with-akaroa = true
-sim.node[0].nic.mac.ser.with-akaroa = true
+sim.node[0].nic.mac.ber.with-akaroa = false
+sim.node[0].nic.mac.ser.with-akaroa = false
 sim.node[0].nic.phy.sinr.with-akaroa = true
+sim.node[0].nic.phy.EbN0.with-akaroa = true
 
 [Config seg]
 extends = BERD
